# capucho-os

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  rust-toolchain
.cargo/: config.toml
src/: acpi.rs  ahci.rs  allocator.rs  apic.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  pci.rs  sata.rs  vga_buffer.rs
src/acpi/: handlers.rs
src/allocator/: fixed_size_block.rs  linked_list.rs
src/interrupts/: controller.rs  mod.rs
src/memory/: mod.rs
src/memory/frame_allocator/: bootstrap.rs  mod.rs
