[package]
name = "capucho_os"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
volatile = "0.2.7"
spin = "0.7.1"
x86_64 = "0.13.2"
uart_16550 = "0.2.12"
pc-keyboard = "0.5.1"
buddy_system_allocator = "0.7.0"
pci_types = "0.2.0"
acpi = "2.2.0"
aml = "0.10.0"
log = "0.4.14"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.bootloader]
version = "0.9.14"
features = ["map_physical_memory"]

[package.metadata.bootimage]
run-args = ["-serial", "stdio"]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none"
]
test-success-exit-code = 33
